--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
-    "react": "^16.11.0",
+    "react": "^16.12.0",
     "react-chartjs-2": "^2.8.0",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "reactstrap": "^8.1.1",
     "recharts": "^1.8.5"
   },
   "scripts": {
