--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "react": "^16.12.0",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
     "react-scripts": "3.2.0",
     "reactstrap": "^8.1.1",
     "recharts": "^1.8.5"
